# ebsi-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml  tests.yml
crates/dice/src/: lib.rs
src/: bot.rs  main.rs
src/commands/: dice.rs  help.rs  mod.rs  ping.rs
src/model/: command.rs
src/utils/: embed.rs  mod.rs  time_format.rs
