[package]
name = "ebsi-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/dice"
]

[dependencies]
dice = { path = "crates/dice" }

anyhow = "1.0.66"
shuttle-serenity = "0.30.0"
shuttle-runtime = "0.30.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-secrets = "0.30.0"
tokio = "1.26.0"
tracing = "0.1.37"
